  the e-mail address as provided by you to the server. The plugin will continue
  to use it to send e-mails from your web shop to you.
- ALL: Added support for the 'invoicetype' parameter (reminder or normal
  invoice) in the Acumulus::getInvoicePdfUri() method.
  NOTE for developers: this makes this call backwards incompatible if you did
  call it with the $applyGraphics parameter set!

Bugs:
- Text unknown severity in Log for success messages.

7.1.1 (2022-05-03) (JOO only)
-----------------------------
Bugs:
- Error checking on forms was not yet adapted to new way of error reporting from
  the communication layer. Impossible to enter account details on the config
  form.
- JOO: Extended error catching to also cover the display() phase of our forms.
- ALL: PHP Deprecated: strpos(): Non-string needles will be interpreted as
  strings in the future. Use an explicit chr() call to preserve the current
  behavior in Helpers\Log.php on line 230.

Refactorings:
- Pulled method checkAccountSettings() from BaseConfigForm up to Form.

7.1.0 (2022-05-02) (JOO only)
-----------------------------
Features:
- JOO: We now look for uncaught errors at the highest level of our operations,
  controller tasks or event handlers, and log and mail those errors. On Admin
  screens we also display a short error message. The mail should facilitate
  support. Other plugins will follow in future versions.

Refactorings:
- Extracted the environment part out of Config into its own class Environment,
  added database name and version to it, and removed json version from it.
- Redesigned the error handling around the communication with the Acumulus API
  server. The library now better recognises and distinguishes errors at the
  protocol and the application level. By encapsulating this in the ApiClient
  namespace layer, the other code can become more robust as it becomes less
  dependent on specific error codes (that changed form API v4 to v5).