@@ -101,6 +101,7 @@ class CrashReporter
         $support = $environment['supportEmail'];
         $paragraphIntroduction = sprintf($this->t('crash_mail_body_start'), $moduleName, $module, $support);
         $paragraphIntroductionText = wordwrap($paragraphIntroduction, 70);
+        $paragraphIntroductionHtml = nl2br($paragraphIntroduction, false);
 
         $aboutEnvironment = $this->t('about_environment');
         $aboutError = $this->t('about_error');
@@ -110,7 +111,7 @@ class CrashReporter
         $errorMessageHtml = nl2br($errorMessage, false);
         $body = [
             'text' => "$paragraphIntroductionText\n$aboutEnvironment:\n\n$environmentListText\n$aboutError:\n\n$errorMessage\n",
-            'html' => "<p>$paragraphIntroduction</p>\n<h3>$aboutEnvironment</h3>\n$environmentListHtml\n<h3>$aboutError</h3>\n<p>$errorMessageHtml</p>\n",
+            'html' => "<p>$paragraphIntroductionHtml</p>\n<h3>$aboutEnvironment</h3>\n$environmentListHtml\n<h3>$aboutError</h3>\n<p>$errorMessageHtml</p>\n",
             ];
         $this->mailer->sendMail($from, $fromName, $to, $subject, $body['text'], $body['html']);
     }
